--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "0.0.14",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
