--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-email/components": "0.0.14",
+    "@react-email/components": "^0.0.25",
     "next": "^14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
